crates/solidity/testing/snapshots/bindings_output/expressions/revert_named_args/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[input.sol:2:18]
   │
 2 │ ╭─▶     error Failure(
   ┆ ┆   
 5 │ ├─▶     );
   │ │            
   │ ╰──────────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[input.sol:8:23]
   │
 8 │         revert Failure({severity: 100, cause: "Testing"});
   │                       ─────────────────┬─────────────────  
   │                                        ╰─────────────────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (4):
- Def: #1 ["Test" @ input.sol:1:10] (contract)
- Def: #2 ["Failure" @ input.sol:2:11] (state var, type: unresolved)
- Def: #3 ["test" @ input.sol:7:14] (function, type: function () returns void)
- Def: #4 ["Failure" @ input.sol:8:16] (variable, type: unresolved)

------------------------------------------------------------------------

References (2):
- Ref: ["error" @ input.sol:2:5] -> unresolved
- Ref: ["revert" @ input.sol:8:9] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     error Failure(
   │     ──┬── ───┬───  
   │       ╰──────────── unresolved
   │              │     
   │              ╰───── name: 2
   │ 
 7 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 3
 8 │         revert Failure({severity: 100, cause: "Testing"});
   │         ───┬── ───┬───  
   │            ╰──────────── unresolved
   │                   │     
   │                   ╰───── name: 4
───╯
